--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@ body {
 
 h1,
 h2 {
-	font-family: 'Poiret One', cursive, sans-serif;
+	font-family: 'Gill Sans', 'Times New Roman', serif;
 	font-weight: 800;
 	font-size: 25px;
 }
@@ -57,6 +57,10 @@ textarea {
 
 textarea:hover {
 	border: 1px solid grey;
+}
+
+a {
+	text-decoration: underline;
 }
 
 /* cyrillic */
